--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <h3 class="hello">Hello, my name is <span class="name">Gopinathan A</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Fullstack Developer</span></h3>
                             <p>A skilled full-stack developer and passionate FOSS advocate, blending technical expertise with a commitment to open-source principles. Dedicated to building impactful, ethical web solutions and fostering community-driven innovation.</p>
-                            <a href="https://drive.google.com/file/d/1oqlCb5eUAWC97e6OZde48cW9B201GCuN/view?usp=sharing" class="btn ">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1ldvQnR2n4FUvyNWCguFlefYg6DnnwmC6/view?usp=sharing" class="btn ">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="Image/WhatsApp_Image_2024-11-01_at_6.06.10_PM-removebg-preview.png" alt="">
@@ -71,7 +71,7 @@
                                 <div class="row">
                                     <div class="about-text padd-15">
                                         <h3>I'm Gopinathan A  and <span>Fullstack Developer</span></h3>
-                                        <p>As a dedicated full-stack developer, I specialize in building seamless, dynamic web applications that deliver exceptional user experiences. Proficient in front-end technologies like HTML, CSS, JavaScript, and frameworks such as React, I craft visually appealing, responsive interfaces. On the back-end, I work with Node.js, Python, and databases like MongoDB and MySQL to ensure efficient, scalable solutions. With a passion for clean code and open-source principles, I prioritize collaboration, innovation, and performance optimization. From design to deployment, I’m committed to creating impactful digital solutions that align with user needs and business goals. Let’s build something extraordinary together!
+                                        <p>As a dedicated full-stack developer, I specialize in building seamless, dynamic web applications that deliver exceptional user experiences. Proficient in front-end technologies like HTML, CSS, JavaScript, and frameworks such as React, Next.js, I craft visually appealing, responsive interfaces. On the back-end, I work with Node.js, Python Django, Flask, FastAPI and databases like MongoDB and MySQL to ensure efficient, scalable solutions. With a passion for clean code and open-source principles, I prioritize collaboration, innovation, and performance optimization. From design to deployment, I’m committed to creating impactful digital solutions that align with user needs and business goals. Let’s build something extraordinary together!
                                         </p>
                                     </div>
                                 </div>
@@ -99,7 +99,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="buttons padd-15">
-                                                <a href="https://drive.google.com/file/d/1oqlCb5eUAWC97e6OZde48cW9B201GCuN/view?usp=sharing" class="btn">Download CV</a>
+                                                <a href="https://drive.google.com/file/d/1ldvQnR2n4FUvyNWCguFlefYg6DnnwmC6/view?usp=sharing" class="btn">Download CV</a>
                                                 <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                             </div>
                                         </div>
@@ -121,9 +121,16 @@
                                                 </div>
                                             </div>
                                             <div class="skills-item padd-15">
-                                                <h5>JS</h5>
+                                                <h5>JavaScript</h5>
                                                 <div class="progress">
                                                    <div class="progress-in" style="width: 50%;"></div>
+                                                   <div class="skill-percent">50%</div>
+                                                </div>
+                                            </div>
+                                            <div class="skills-item padd-15">
+                                                <h5>Python</h5>
+                                                <div class="progress">
+                                                   <div class="progress-in" style="width: 80%;"></div>
                                                    <div class="skill-percent">50%</div>
                                                 </div>
                                             </div>
@@ -146,6 +153,27 @@
                                                 <div class="progress">
                                                    <div class="progress-in" style="width: 40%;"></div>
                                                    <div class="skill-percent">40%</div>
+                                                </div>
+                                            </div>
+                                            <div class="skills-item padd-15">
+                                                <h5>Django</h5>
+                                                <div class="progress">
+                                                   <div class="progress-in" style="width: 50%;"></div>
+                                                   <div class="skill-percent">80%</div>
+                                                </div>
+                                            </div>
+                                            <div class="skills-item padd-15">
+                                                <h5>Flask</h5>
+                                                <div class="progress">
+                                                   <div class="progress-in" style="width: 50%;"></div>
+                                                   <div class="skill-percent">50%</div>
+                                                </div>
+                                            </div>
+                                            <div class="skills-item padd-15">
+                                                <h5>FastAPI</h5>
+                                                <div class="progress">
+                                                   <div class="progress-in" style="width: 50%;"></div>
+                                                   <div class="skill-percent">60%</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -387,7 +415,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
                             <h4>Working Place</h4>
-                            <p>Valechery, Chennai, TN</p>
+                            <p>Cuddalore, TN</p>
                          </div>
                         <!-- ====== Contact info item end ===== -->
                         <!-- ====== Contact info item start ===== -->
